--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vercel/ncc": "^0.36.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "child_process": "^1.0.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
